# firebase-auth-wrapper

./: .gitignore  CMakeLists.txt  authentication.i  authentication.ini  firebase-auth-vendored.podspec  firebase-auth.podspec  main.js  package-lock.json  package.json  swig-config.js
android/: .gitignore  AppleDelegate.cpp  FacebookDelegate.cpp  GoogleDelegate.cpp  PersistentAppData.cpp  settings.gradle
android/with_google_play_signin/: build.gradle
android/with_google_signin/: build.gradle
authentication/: Android.mk  AppleDelegate.h  FacebookDelegate.h  GoogleDelegate.h  PersistentAppData.h
authentication/controller/: apple_login_delegate.h  controller.cpp  controller.h  login_delegate.h
authentication/firebase/: auth_state_listener.cpp  auth_state_listener.h
authentication/models/: user_info.h
bindings/auto/2.x/: jsb_authentication_auto.cpp  jsb_authentication_auto.h  jsb_authentication_auto.hpp  jsb_authentication_auto.json
bindings/auto/3.7.x/: jsb_authentication_auto.cpp  jsb_authentication_auto.h
bindings/auto/3.x.x_3.6.x/: jsb_authentication_auto.cpp  jsb_authentication_auto.h  (+1 more)
bindings/manual/: AuthJSHelper.h  AuthJsHelper.cpp  login_delegate_impl.cpp  login_delegate_impl.h
ios/: AppleDelegate.mm  CMakeLists.txt  FacebookDelegate.mm  GoogleDelegate.mm  IosGlobals.h  IosGlobals.mm  KeychainHelper.h  KeychainHelper.mm  PersistentAppData.mm  SecurityHelper.h  SecurityHelper.mm
ios/firebase-auth/: CPFramework.sh
scripts/: AuthDefinitions.ts  BaseAuthDelegate.ts  CommonAuthDelegate.ts  CommonLoginFlowManager.ts  EventDispatcher.ts  LoginFlowManager.ts
scripts/instant-games/: AuthDelegateInstant.ts  LoginFlowManagerInstant.ts
scripts/interfaces/: IAnalyticsHelper.ts  IAuthDelegate.ts  IErrorLogger.ts  IHttpRequest.ts  ILoginFlowManager.ts  ISessionHelper.ts
scripts/native/: AuthDelegateNative.ts  LoginFlowManagerNative.ts
scripts/web/: AuthDelegateWeb.ts  LoginFlowManagerWeb.ts  PlatformAuthWeb.ts
(+10 files in other folders)
